# ufun

./: README.md  conf.py  pyproject.toml  ufun.py  unit_tests.py
_build/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
_build/.doctrees/: environment.pickle  index.doctree
_build/_sources/: index.rst.txt
src/: ufun.py
