[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ufun_cbo27"
version = "0.0.1"
authors = [
  { name="Braxton Owens", email="cbraxtonowens@gmail.com" },
]
description = "A small example package"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/braxtonowens/ufun"
